AuthService/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: auth    
  template:
    metadata:
      labels:
        app: auth    
    spec:
      containers:
        - name: auth
          image: ashonuyak/microservices:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          lifecycle:
            postStart:
              exec:
                command: ["npm", "run", "typeorm", "--", "migration:run"]
