AuthService/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: auth
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 3000
  selector:
    app: auth
